--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,11 @@
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".AboutALCActivity"
-            android:label="@string/title_activity_about_alc"
+            android:label="ABOUT ALC"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label="ALC 4 Phase 1"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
